# osg_demo

./: .gitignore  CMakeLists.txt
include/: TravelManipulator.h
src/: TravelManipulator.cpp  main.cpp
